# pluginterface

./: README.md
.claude-plugin/: marketplace.json
plugins/clapboard/: pyproject.toml  sync_trim.py
plugins/clapboard/.claude-plugin/: plugin.json
plugins/clapboard/skills/clapboard/: SKILL.md
plugins/humanq/: README.md  post-task.py  roam.sh  setup.sh
plugins/humanq/skills/humanq/: SKILL.md
plugins/humanq/skills/setup/: SKILL.md
plugins/og-image-drafting/: README.md
plugins/og-image-drafting/.claude-plugin/: plugin.json
plugins/og-image-drafting/skills/og-image-drafting/: SKILL.md  draft.py
plugins/saywhen/: README.md  setup.sh
plugins/saywhen/.claude-plugin/: plugin.json
plugins/saywhen/commands/: mute.md  setup.md  unmute.md
plugins/saywhen/hooks/: hooks.json
plugins/saywhen/skills/mute/: SKILL.md
plugins/saywhen/skills/setup/: SKILL.md
plugins/saywhen/skills/unmute/: SKILL.md
plugins/saywhen/test/: hooks_test.sh  setup_test.sh
plugins/throw-down-the-keys/: README.md  pyproject.toml  throw_down.py
plugins/throw-down-the-keys/skills/throw-down-the-keys/: SKILL.md
